Test with the no-untar option

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -1,3 +1,4 @@
 .rst-content .highlight > pre {
 	line-height: 1.5;
+    font-family: "Source Code Pro", "Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
 }
